feat: add html style

--- a/index.html
+++ b/index.html
@@ -1,1 +1,58 @@
 
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
+    <title>Experience and Skills Summary</title>
+</head>
+
+<body>
+
+    <div class="wrapper">
+        <header class="header">Experience and Skills Summary</header>
+        <div class="summary">
+            <h2 class="box-title">Professional Summary</h2>
+            <p> <img/>Recently, I decided to change my career and deep into the IT world for a better opportunity, more challenges, and career growth. Now, I'm on my way to reach my goal. My first step was an intro to coding class to learn HTML, CSS, and
+                JavaScript fundamentals with <a href="https://www.fullstackacademy.com/bootcamp-prep"> Full Stuck Academy</a>. I'm looking forward to obtaining a better understanding of programming concepts with<a href="https://rs.school/index.html"> RS School</a>.
+            </p>
+        </div>
+        <div class="box left-box">
+            <h2 class="box-title">Contact Information</h2>
+            <ul>
+                <li>name: Daniil Boussel</li>
+                <li>email: dan.boussel@gmail.com</li>
+            </ul>
+
+            <img src="faceimg.jpeg">
+
+        </div>
+        <div class="box right-box">
+            <h2 class="box-title">Academic History</h2>
+            <ul>
+                <li>English as a second language, 2007
+                    <ul>
+                        <li>Camden County College</li>
+                    </ul>
+                </li><br><br>
+                <li>Ekg Technitian and First Aid Program, 2009
+                    <ul>
+                        <li>Burlington County College</li>
+                    </ul>
+                </li><br><br>
+                <li> Associate in Biology and Respiratory Therapy Program, 2011
+                    <ul>
+                        <li>Camden County College </li>
+                    </ul>
+                </li><br><br>
+                <li>Basic Javascript, 2020
+                    <ul>
+                        <li>Full Stuck Academy </li>
+                    </ul>
+                </li>
+            </ul>
+        </div>
+    </div>
